@@ -1,3 +1,10 @@
+2006-01-21  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* src/bookmarks/ephy-bookmarks-editor.c (cmd_bookmarks_export): 
+
+	Fix bookmark exporting, so that it can be cancelled. 
+	Fixes bug #327438
+
 2006-01-21  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/window-commands.c: (window_cmd_help_about):
